@@ -44,28 +44,40 @@ public class BannerController {
             List<Banner> banners = bannerRepository.findAll();
             Banner banner = banners.isEmpty() ? new Banner() : banners.get(0);
 
-            if (titulo != null && !titulo.isBlank()) {
+            // Mantém os títulos padrão caso estejam vazios ou nulos
+            if (titulo != null && !titulo.trim().isEmpty()) {
                 banner.setTitulo(titulo.trim());
-            }
-            if (subtitulo != null && !subtitulo.isBlank()) {
-                banner.setSubtitulo(subtitulo.trim());
+            } else if (banner.getTitulo() == null) {
+                banner.setTitulo("MATUTA");
             }
 
+            if (subtitulo != null && !subtitulo.trim().isEmpty()) {
+                banner.setSubtitulo(subtitulo.trim());
+            } else if (banner.getSubtitulo() == null) {
+                banner.setSubtitulo("PEÇAS EXCLUSIVAS");
+            }
+
+            // Upload Foto Esquerda para o Cloudinary
             if (fotoEsquerda != null && !fotoEsquerda.isEmpty()) {
                 Map res = cloudinary.uploader().upload(fotoEsquerda.getBytes(), ObjectUtils.asMap("folder", "matuta-banner"));
-                banner.setFotoEsquerdaUrl((String) res.get("secure_url"));
+                if (res != null && res.containsKey("secure_url")) {
+                    banner.setFotoEsquerdaUrl((String) res.get("secure_url"));
+                }
             }
 
+            // Upload Foto Direita para o Cloudinary
             if (fotoDireita != null && !fotoDireita.isEmpty()) {
                 Map res = cloudinary.uploader().upload(fotoDireita.getBytes(), ObjectUtils.asMap("folder", "matuta-banner"));
-                banner.setFotoDireitaUrl((String) res.get("secure_url"));
+                if (res != null && res.containsKey("secure_url")) {
+                    banner.setFotoDireitaUrl((String) res.get("secure_url"));
+                }
             }
 
             Banner salvo = bannerRepository.save(banner);
             return ResponseEntity.ok(salvo);
         } catch (Exception e) {
             e.printStackTrace();
-            return ResponseEntity.badRequest().body("Erro no banco ou no upload: " + e.getMessage());
+            return ResponseEntity.status(500).body("Erro interno ao processar o banner: " + e.getMessage());
         }
     }
 
